[gd_scene load_steps=3 format=3 uid="uid://api_item_uid"]

[ext_resource type="Script" path="res://pages/settings/model_management/APIItem.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
content_margin_left = 24.0
content_margin_top = 20.0
content_margin_right = 24.0
content_margin_bottom = 20.0
bg_color = Color(0.25, 0.25, 0.25, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="APIItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 140)
offset_right = 900.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1_script")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 24

[node name="StatusIndicator" type="ColorRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
size_flags_vertical = 1
color = Color(1, 1, 1, 1)

[node name="NameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "默认 API"
vertical_alignment = 1

[node name="SelectBtn" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 70)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_disabled_color = Color(0.2, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "选择"

[node name="TestBtn" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 70)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "测试"

[node name="EditBtn" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 70)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "编辑"

[node name="DeleteBtn" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 70)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.8, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "删除"
